<resources>
    <string name="app_name">Shop</string>
    <string-array name="sort_by">
        <item>Price</item>
        <item>Name</item>
        <item>Relevance</item>
    </string-array>
    <string name="product_image">Product Image</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="filters">Filters</string>
    <string name="checkout">Checkout</string>
    <string name="your_cart">Your Cart</string>
    <string name="final_price">Final Price:</string>
    <string name="sort_by">Sort By:</string>
    <string name="change_sorting_order">Change Sorting Order</string>
    <string name="shipping">Shipping</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_link">Sign Up!</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in_link">Log In!</string>
    <string name="user_info">User Info</string>
    <string name="profile_picture">Profile Picture:</string>
    <string name="add_a_profile_picture">Add a Profile Picture?</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="wishlist">Wishlist</string>
    <string name="on_your_wishlist">On Your Wishlist</string>
    <string name="log_out">Log Out</string>
    <string name="you_have_been_logged_out">You have been logged out. \nPlease log in again to keep using the app.</string>
    <string name="ok">OK</string>
    <string name="session_expired">Session Expired</string>
</resources>